manifests/0000_30_cluster-api_13_allow-ingress-to-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-metrics
  namespace: openshift-cluster-api
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    release.openshift.io/feature-set: "CustomNoUpgrade,TechPreviewNoUpgrade"
spec:
  podSelector:
    matchExpressions:
    - key: control-plane
      operator: In
      values:
      - controller-manager
      - capa-controller-manager
    - key: k8s-app
      operator: In
      values:
      - cluster-capi-operator
  ingress:
  - from:
    - namespaceSelector: {}  # Allow from any namespace
    - podSelector: {}         # Allow from any pod
    ports:
    - protocol: TCP
      port: 8443
  policyTypes:
  - Ingress
